Add games in the list

--- a/index.html
+++ b/index.html
@@ -36,14 +36,26 @@
           </li>
 
           <li>
-            <a href="https://www.twitch.tv/directory/game/Apex%20Legends">
-              <img src="https://static-cdn.jtvnw.net/ttv-boxart/511224-188x250.jpg" alt="Imagem do Apex na Twitch">
+            <a href="https://www.twitch.tv/directory/game/The%20Forest">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/7022_IGDB-188x250.jpg" alt="Imagem de The Forest na Twitch">
             </a>
           </li>
 
           <li>
             <a href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V">
               <img src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-188x250.jpg" alt="Imagem do GTA V na Twitch">
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.twitch.tv/directory/game/The%20Witcher%203%3A%20Wild%20Hunt">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/115977_IGDB-188x250.jpg" alt="Imagem de The Witcher 3 na Twitch">
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.twitch.tv/directory/game/Stardew%20Valley">
+              <img src="https://static-cdn.jtvnw.net/ttv-boxart/490744_IGDB-188x250.jpg" alt="Imagem de Stardew Valley na Twitch">
             </a>
           </li>
         </ul>
@@ -72,6 +84,12 @@
           <li>
             <a href="https://www.twitch.tv/alanzoka" target="_blank">
               <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/15cec952-c1ba-4ff8-a79c-53c2fa5bd269-profile_image-150x150.png" alt="Imagem do Streamer Alanzoka">
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.twitch.tv/valorant" target="_blank">
+              <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/8766585f-8c02-48b5-9574-228ec3e01109-profile_image-150x150.png" alt="Imagem do Valorant Br">
             </a>
           </li>
         </ul>
